validating-admission-policies/pod-security/baseline/disallow-host-ports/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
  - name: container02
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: web-secure
      containerPort: 4443
      hostPort: 443
  - name: container02
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
    - name: web-insecure
      containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: web-insecure
      containerPort: 8080
  - name: container02
    image: dummyimagename
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: web-insecure
      containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: web-insecure
      containerPort: 8080
